<resources>
    <string name="app_name">Terrivial</string>
    <string name="jugar">Jugar</string>
    <string name="todo">TODO</string>
    <string name="puntos">PUNTOS:</string>
    <string name="geopolitica">GEOPOLITICA</string>
    <string name="ciencia">CIENCIA</string>
    <string name="entretenimiento">ENTRETENIMIENTO</string>
    <string name="fin">Dios mío, jamás pensé que llegaría este día, pero has ganado. Mis dieces la verdad</string>
    <string name="ciencia2">Ciencia</string>
    <string name="entretenimiento2">Entretenimiento</string>
    <string name="geopolitica2">Geopolitica</string>
    <string name="tienda">Tienda</string>
    <string name="comprar">Comprar</string>
    <string name="_100_monedas">100 monedas</string>
    <string name="descr_ff">Este potenciador quita de forma completamente aleatoria dos respuestas incorrectas.</string>
    <string name="descr_pasar">Este potenciador permite al jugador cambiar de pregunta sin necesidad de responder a la actual (te lleva a una pregunta de la misma categoría). </string>
    <string name="descr_respcor">Este potenciador da directamente la respuesta correcta.</string>
    <string name="mute">Mute music</string>
    <string name="casino">CASINO</string>
    <string name="interrogacion">\?</string>
    <string name="intentos">Intentos: </string>
    <string name="apuesta_lograda">Enhorabuena, has logrado la apuesta</string>
    <string name="perdiste">Pues has perdido culega, mas suerte la próxima</string>
    <string name="lista_negra">Lista negra</string>
    <string name="introduce_tu_apuesta">Introduce tu apuesta</string>
</resources>