<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:src="@drawable/poto" />

    <Button
        android:id="@+id/jugar"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="-290dp"
        android:text="@string/jugar" />

    <Button
        android:id="@+id/tienda"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/jugar"
        android:layout_alignTop="@+id/jugar"
        android:layout_alignEnd="@+id/jugar"
        android:layout_alignBottom="@+id/jugar"
        android:layout_marginStart="0dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="-170dp"
        android:text="@string/tienda"
        android:backgroundTint="#17500F"/>

    <TextView
        android:id="@+id/monedos"
        android:layout_width="161dp"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="246dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="-39dp"
        android:textColor="#FFFF00" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/mute"
        android:layout_width="196dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="-40dp"
        android:minHeight="48dp"
        android:text="@string/mute"
        android:textColor="#FFFFFF"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

</RelativeLayout>
